--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <!-- slick slider -->
   <link rel="stylesheet" href="assets/css/slick.css">
 
+  <!-- magic popup -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 
@@ -108,15 +111,16 @@
                   <p>Call For Queries</p>
                   <p>+ 1800 - 123 456 78</p>
                 </div>
+                <a class="video-youtube" href="https://www.youtube.com/watch?v=6WJ13zrscxs">
                 <div class="video">
-                  <a href="">
-                    <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M20 10.268C21.3333 11.0378 21.3333 12.9623 20 13.7321L3.5 23.2583C2.16666 24.0281 0.500001 23.0659 0.500001 21.5263L0.500002 2.47372C0.500002 0.934117 2.16667 -0.0281314 3.5 0.741669L20 10.268Z"
-                        fill="currentColor" />
-                    </svg>
-                  </a>
+                  <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M20 10.268C21.3333 11.0378 21.3333 12.9623 20 13.7321L3.5 23.2583C2.16666 24.0281 0.500001 23.0659 0.500001 21.5263L0.500002 2.47372C0.500002 0.934117 2.16667 -0.0281314 3.5 0.741669L20 10.268Z"
+                      fill="#ffffff" />
+                  </svg>
+                  
                 </div>
+              </a>
               </div>
             </div>
           </div>
@@ -797,39 +801,61 @@
         <div class="row">
           <div class="col-lg-4">
             <!-- Card1 -->
-            <div class="card" style="width: 95%;">
+            <div class="card">
               <div class="card-head">
                 <img src="assets/images/image12.png" class="card-img-top" alt="...">
                 <button class="card-btn">Branding</button>
               </div>
               <div class="card-body">
-                <a href="" class="title-link"><h6 class="card-title">The best Marketing Strategy for every Company</h6></a>
-                <a class="card-date" href=""><p>April 01 , 2022</p></a>
-                <p class="card-text">One may not need charts and graphs at this point to know that, in the past couple of years especially, the buying and selling o...</p>
+                <a href="" class="title-link">
+                  <h6 class="card-title">The best Marketing Strategy for every Company</h6>
+                </a>
+                <a class="card-date" href="">
+                  <p>April 01 , 2022</p>
+                </a>
+                <p class="card-text">One may not need charts and graphs at this point to know that, in the past couple
+                  of years especially, the buying and selling o...</p>
                 <a href="#" class="read-more">Read More</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <!-- Card1 -->
+            <div class="card">
+              <div class="card-head">
+                <img src="assets/images/image11.png" class="card-img-top" alt="...">
+                <button class="card-btn">Branding</button>
+              </div>
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p>April 01 , 2022</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="" class="title-link">
+                  <h6 class="card-title">The best Marketing Strategy for every Company</h6>
+                </a>
+                <a class="card-date" href="">
+                  <p>April 01 , 2022</p>
+                </a>
+                <p class="card-text">One may not need charts and graphs at this point to know that, in the past couple
+                  of years especially, the buying and selling o...</p>
+                <a href="#" class="read-more">Read More</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <!-- Card1 -->
+            <div class="card">
+              <div class="card-head">
+                <img src="assets/images/image10.png" class="card-img-top" alt="...">
+                <button class="card-btn">Branding</button>
+              </div>
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="" class="title-link">
+                  <h6 class="card-title">The best Marketing Strategy for every Company</h6>
+                </a>
+                <a class="card-date" href="">
+                  <p>April 01 , 2022</p>
+                </a>
+                <p class="card-text">One may not need charts and graphs at this point to know that, in the past couple
+                  of years especially, the buying and selling o...</p>
+                <a href="#" class="read-more">Read More</a>
               </div>
             </div>
           </div>
@@ -841,6 +867,93 @@
 
 
   <!-- footer section -->
+  <footer class="fooder-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="footer-logo-section">
+            <img src="assets/images/logo2.png" alt="">
+            <p>One may not need charts and graphs at this point to know that, in the past couple of years especially,
+              the buying and selling</p>
+            <div class="logo-icon">
+              <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_38_146)">
+                  <path
+                    d="M28.5306 5.95759C27.523 6.40408 26.4406 6.70576 25.3026 6.84212C26.4768 6.13955 27.3552 5.0338 27.774 3.73117C26.6709 4.38641 25.4635 4.84763 24.2045 5.09478C23.3578 4.19077 22.2364 3.59158 21.0143 3.39024C19.7922 3.18889 18.5378 3.39665 17.4459 3.98127C16.354 4.56588 15.4856 5.49464 14.9756 6.62335C14.4656 7.75205 14.3425 9.01755 14.6255 10.2234C12.3902 10.1111 10.2036 9.53017 8.20739 8.51816C6.21122 7.50614 4.45014 6.0857 3.03846 4.34902C2.55576 5.18166 2.27822 6.14704 2.27822 7.17518C2.27768 8.10074 2.5056 9.01212 2.94177 9.82846C3.37794 10.6448 4.00886 11.3409 4.77856 11.8549C3.88591 11.8265 3.01296 11.5853 2.23236 11.1514V11.2238C2.23227 12.5219 2.6813 13.7801 3.50327 14.7848C4.32523 15.7896 5.4695 16.479 6.74191 16.7361C5.91383 16.9602 5.04566 16.9932 4.20295 16.8326C4.56195 17.9496 5.26125 18.9264 6.20295 19.6261C7.14465 20.3259 8.2816 20.7137 9.45464 20.7352C7.46334 22.2984 5.00408 23.1464 2.4725 23.1426C2.02406 23.1428 1.57599 23.1166 1.13062 23.0642C3.70032 24.7164 6.69164 25.5933 9.74667 25.5899C20.0884 25.5899 25.7419 17.0245 25.7419 9.59588C25.7419 9.35453 25.7359 9.11077 25.725 8.86943C26.8247 8.07416 27.7739 7.08938 28.5282 5.96121L28.5306 5.95759Z"
+                    fill="white" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_38_146">
+                    <rect width="28.9615" height="28.9615" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
+              <svg width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M15 2.71533C8.51194 2.71533 3.23438 7.99289 3.23438 14.481C3.23438 20.969 8.51194 26.2466 15 26.2466C21.4881 26.2466 26.7656 20.969 26.7656 14.481C26.7656 7.99289 21.4881 2.71533 15 2.71533ZM22.7806 8.13996C24.1806 9.85107 25.0291 12.0288 25.0489 14.4018C24.7179 14.3311 21.3947 13.6579 18.0517 14.0793C17.981 13.9068 17.9103 13.7343 17.8368 13.5618C17.6275 13.0725 17.404 12.5832 17.1693 12.1052C20.8828 10.5864 22.5685 8.42845 22.7806 8.13996ZM15 4.44624C17.5539 4.44624 19.8873 5.40502 21.6606 6.97754C21.4796 7.23491 19.9664 9.26844 16.3943 10.609C14.7483 7.58279 12.924 5.09957 12.644 4.72624C13.4162 4.53957 14.2053 4.44624 15 4.44624ZM10.7265 5.40219C10.9923 5.76421 12.7883 8.25592 14.4513 11.2143C9.75072 12.4616 5.61013 12.4446 5.16043 12.4389C5.81376 9.31935 7.91517 6.72865 10.7265 5.40219ZM4.95114 14.4951C4.95114 14.3933 4.95397 14.2886 4.95679 14.1868C5.39518 14.1953 10.2655 14.2575 15.2857 12.7557C15.5741 13.3185 15.8485 13.8898 16.1002 14.4612C15.9673 14.4979 15.8343 14.5375 15.7042 14.5799C10.52 16.2599 7.76244 20.8276 7.53335 21.2151C5.92972 19.4333 4.95114 17.0773 4.95114 14.4951ZM15 24.544C12.6752 24.544 10.5342 23.752 8.83153 22.4227C9.01254 22.0522 11.0461 18.1238 16.7139 16.1468L16.779 16.1242C18.1903 19.7896 18.7729 22.864 18.9228 23.7464C17.6831 24.2763 16.3482 24.5477 15 24.544ZM20.6141 22.8272C20.5123 22.2163 19.9778 19.2749 18.6626 15.6632C21.8133 15.1597 24.5794 15.9856 24.9216 16.0931C24.4747 18.8874 22.8711 21.3027 20.6141 22.8272Z"
+                  fill="white" />
+              </svg>
+              <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_38_140)">
+                  <path
+                    d="M26.5866 8.44715H18.1395V6.03369H26.5866V8.44715ZM28.6695 20.5145C28.1361 22.0796 26.221 24.1346 22.5139 24.1346C18.8044 24.1346 15.7997 22.0482 15.7997 17.2865C15.7997 12.5681 18.6053 10.1426 22.3957 10.1426C26.1148 10.1426 28.3859 12.293 28.8818 15.4836C28.976 16.0942 29.0134 16.9172 28.9965 18.066H19.3101C19.4669 21.9408 23.5131 22.0627 24.8465 20.5145H28.6695ZM19.3945 15.6875H25.3859C25.2592 13.8207 24.0151 13.0098 22.3969 13.0098C20.6278 13.0098 19.6492 13.9366 19.3945 15.6875ZM7.84129 24.1202H0.0385742V6.05903H8.42897C15.037 6.15678 15.1625 12.6285 11.7113 14.3927C15.8878 15.9132 16.0278 24.1202 7.84129 24.1202ZM3.65877 13.2741H7.98369C11.0102 13.2741 11.4904 9.65388 7.60719 9.65388H3.65877V13.2741ZM7.75079 16.8943H3.65877V20.5338H7.69045C11.377 20.5338 11.1514 16.8943 7.75079 16.8943Z"
+                    fill="white" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_38_140">
+                    <rect width="28.9615" height="28.9615" fill="white" transform="translate(0.0385742)" />
+                  </clipPath>
+                </defs>
+              </svg>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="fooder-section2">
+            <h6>New York</h6>
+            <p>523 Sylvan Ave, 5th Floor
+              Mountain View, CA 94041USA</p>
+            <h6>Qubec</h6>
+            <p>7140 Wehner Tunnel
+              Washington, D.C</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="fooder-section3">
+            <h6>Quick Menu</h6>
+            <ul>
+              <a href="">
+                <li>Home</li>
+              </a>
+              <a href="">
+                <li>About</li>
+              </a>
+              <a href="">
+                <li>Service</li>
+              </a>
+              <a href="">
+                <li>Blog</li>
+              </a>
+              <a href="">
+                <li>Contacts</li>
+              </a>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="fooder-section4">
+            <h6>Phone</h6>
+            <p>+1 234 719 8948 <br>
+              +1 987 654 3210</p>
+            <h6 class="mail">Mail</h6>
+            <p>Interested to contact?
+              anderson@support.com </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- end footer section -->
 
 
@@ -848,6 +961,7 @@
   <!-- javascript files -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
   <script src="assets/js/slick.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
